# prospector-profile-utils

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: renovate.json5
.github/workflows/: dependency-update-review.yaml  main.yaml
ci/: config.yaml  requirements.txt
prospector_profile_utils/: autofix.yaml  base-all.yaml  base-less-strict.yaml  base.yaml  c2cwsgiutils.yaml  fix.yaml  no-design-checks.yaml  pre-commit-no-autofix.yaml  pre-commit.yaml  tests.yaml  unsafe.yaml
