[tool.black]
line-length = 110
target-version = ["py39"]

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict = true

[tool.pytest.ini_options]
pytest_plugins = ["pytest_profiling"]

[tool.poetry]
name = "prospector-profile-utils"
version = "0.0.0"
description = "Some utility Prospector profiles."
readme = "README.md"
authors = ["Stéphane Brunner <stephane.brunner@gmail.com>"]
homepage = "https://github.com/sbrunner/prospector-profile-utils"
repository = "https://github.com/sbrunner/prospector-profile-utils"
license = "BSD-2-Clause"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]
packages = [
  { include = "prospector_profile_utils" },
  { include = "prospector_profile_utils/base.yaml" },
  { include = "prospector_profile_utils/no-design-checks.yaml" }
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-tweak-dependencies-version"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"
