[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
prospector = { version = ">=1.14.0", extras = ["with_mypy", "with_ruff"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"
prospector = ">=1.13.0"

[project]
dynamic = ["dependencies", "version"]
name = "prospector-profile-utils"
description = "Some utility Prospector profiles."
readme = "README.md"
license = "BSD-2-Clause"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
]
authors = [{name = "Stéphane Brunner",email = "stephane.brunner@gmail.com"}]
packages = [
  { include = "prospector_profile_utils" },
  { include = "prospector_profile_utils/base.yaml" },
  { include = "prospector_profile_utils/no-design-checks.yaml" }
]

[project.urls]
repository = "https://github.com/sbrunner/prospector-profile-utils"
"Bug Tracker" = "https://github.com/sbrunner/prospector-profile-utils/issues"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-tweak-dependencies-version"]
build-backend = "poetry.core.masonry.api"
